--- a/CBS ASP.NET Core Course Project.csproj
+++ b/CBS ASP.NET Core Course Project.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>CBS_ASP.NET_Core_Course_Project</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.60" />
+  </ItemGroup>
+
 </Project>
