Added everyday email sending

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "EmailConfiguration": {
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 587,
+    "UserName": "alexsun2006.ukr@gmail.com",
+    "Password": "ukcacnndmbdztfre",
+    "EnableSsl": true
+  }
 }
