Added checkbox for changing email settings

--- a/appsettings.json
+++ b/appsettings.json
@@ -12,5 +12,8 @@
     "UserName": "alexsun2006.ukr@gmail.com",
     "Password": "ukcacnndmbdztfre",
     "EnableSsl": true
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=Products;Trusted_Connection=True;TrustServerCertificate=True;"
   }
 }
